--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.6",
+    "bootstrap-material-design": "^0.5.8",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
+    "jquery": "^2.2.1",
+    "lodash": "^4.5.1",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "serve-favicon": "~2.3.0"
