--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hbs": "~3.1.0",
     "jquery": "^2.2.1",
     "lodash": "^4.5.1",
+    "moment": "^2.11.2",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "serve-favicon": "~2.3.0"
