--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.11.2",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sir-trevor": "^0.5.0"
   }
 }
